<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/doctor_signin"
            android:textColor="@color/colorText"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/signup_in_desc_doctor"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/doctor_signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/signup_hint_3"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/doctor_signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/signup_hint_4"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/doctor_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/colorButton"
            android:text="@string/signin_button_1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/doctor_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="#00000000"
            android:text="@string/signin_button_2"
            android:textColor="@color/colorButton" />

    </LinearLayout>

</ScrollView>