<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="software.doctoronthego.fragments.PatientSignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/signin_patient"
            android:textColor="@color/colorText"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/signup_in_desc"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/patient_signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/signup_hint_3"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/patient_signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/signup_hint_4"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/patient_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@color/colorButton"
            android:text="@string/signin_button_1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/patient_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="#00000000"
            android:text="@string/signin_button_2"
            android:textColor="@color/colorButton" />

        <!--<TextView-->
        <!--android:id="@+id/status"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <!--<TextView-->
        <!--android:id="@+id/result"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <!--<Button-->
        <!--android:id="@+id/logout"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="logout" />-->

    </LinearLayout>


</ScrollView>
