<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv1"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/fname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv2"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv4"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/age1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv5"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/address1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/addPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Choose Photo" />


        <Button
            android:id="@+id/updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/update_profile" />
    </LinearLayout>
</ScrollView>
