<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/patientPhoto"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="16dp"
            android:src="@drawable/unnamed" />

        <View
            android:id="@+id/v"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv1"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="hello world"
                android:textAlignment="center"
                android:textColor="@color/colorText"

                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv2"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="hello world"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv3"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="hello world"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv4"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/age1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="hello world"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv5"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/address1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="hello world"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>